# RustChatBot

./: .env  Cargo.toml  package-lock.json
src/: api.rs
