[package]
name = "rusty_llama"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
cfg-if = "1"
leptos = "0.5.0-beta"
leptos_meta = "0.5.0-beta"
leptos_actix = { version = "0.5.0-beta", optional = true }
leptos_router = "0.5.0-beta"
wasm-bindgen = "0.2.92"
serde = { version = "1.0.183", features = ["derive"] }
rand = { version = "0.8.5", optional = true }
env_logger = "0.10.0"
dotenv = { version = "0.15.0", optional = true }
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", optional = true }
actix-ws = { version = "0.2.5", optional = true }
actix-rt = { version = "2.8.0", optional = true }
futures = { version = "0.3.28", optional = true }
futures-util = "0.3.28"
gloo-net = { version = "0.4.0" }
tokio = "1.31.0"
web-sys = { version = "0.3.64" }
reqwest = { version = "0.12.11" }

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "gloo-net/websocket", "dep:futures"]
ssr = [
    "dep:actix-files", 
    "dep:actix-web", 
    "dep:leptos_actix", 
    "leptos/ssr", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:rand", 
    "dep:dotenv", 
    "dep:llm", 
    "dep:actix-ws", 
    "dep:actix-rt", 
    "dep:futures", 
    "tokio/sync"
]

[profile.dev.package.ggml-sys]
opt-level = 3

[package.metadata.leptos]
output-name = "rusty_llama"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
